Add json server

--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.6.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
@@ -62,9 +60,12 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "jserver": "json-server --watch server/db.json",
+    "start": "run-p rca:start start:server",
+    "start:server": "node server",
+    "rca:start": "node scripts/start.js",
+    "rca:build": "node scripts/build.js",
+    "rca:test": "node scripts/test.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -133,5 +134,11 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.4.0",
+    "eslint-plugin-react": "^7.20.3",
+    "json-server": "^0.16.1",
+    "npm-run-all": "^4.1.5"
   }
 }
