--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   },
   "scripts": {
     "jserver": "json-server --watch server/db.json",
+    "data:gen": "node scripts/generate-db-data.js > server/db.json",
     "start": "run-p rca:start start:server",
     "start:server": "node server",
     "rca:start": "node scripts/start.js",
@@ -148,6 +149,7 @@
   "devDependencies": {
     "eslint": "^7.4.0",
     "eslint-plugin-react": "^7.20.3",
+    "faker": "^4.1.0",
     "json-server": "^0.16.1",
     "npm-run-all": "^4.1.5"
   }
